tests/ui/abi/swift-abi-non-apple.stderr
error[E0570]: "Swift" is not a supported ABI for the current target
  --> $DIR/swift-abi-non-apple.rs:14:8
   |
LL | extern "Swift" fn f() {}
   |        ^^^^^^^

error[E0570]: "Swift" is not a supported ABI for the current target
  --> $DIR/swift-abi-non-apple.rs:17:12
   |
LL |     extern "Swift" fn m();
   |            ^^^^^^^

error[E0570]: "Swift" is not a supported ABI for the current target
  --> $DIR/swift-abi-non-apple.rs:19:12
   |
LL |     extern "Swift" fn dm() {}
   |            ^^^^^^^

error[E0570]: "Swift" is not a supported ABI for the current target
  --> $DIR/swift-abi-non-apple.rs:24:12
   |
LL |     extern "Swift" fn m() {}
   |            ^^^^^^^

error[E0570]: "Swift" is not a supported ABI for the current target
  --> $DIR/swift-abi-non-apple.rs:28:12
   |
LL |     extern "Swift" fn im() {}
   |            ^^^^^^^

error[E0570]: "Swift" is not a supported ABI for the current target
  --> $DIR/swift-abi-non-apple.rs:31:18
   |
LL | type TA = extern "Swift" fn();
   |                  ^^^^^^^

error[E0570]: "Swift" is not a supported ABI for the current target
  --> $DIR/swift-abi-non-apple.rs:33:8
   |
LL | extern "Swift" {}
   |        ^^^^^^^

error: aborting due to 7 previous errors

For more information about this error, try `rustc --explain E0570`.
